--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,53 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,400,900');
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#4d478e+0,55ceb4+100 */
+  background: #4d478e; /* Old browsers */
+  background: -moz-linear-gradient(-45deg, #4d478e 0%, #55ceb4 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(-45deg, #4d478e 0%,#55ceb4 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(135deg, #4d478e 0%,#55ceb4 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4d478e', endColorstr='#55ceb4',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+
+  height: 100vh;
+  color: white;
+}
+
+.add-med{
+  width: 100%;
+  padding: 10px;
+  font-size: 1.2em;
+  border: none;
+  background-color: white;
+  color: #64CFB8;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 800;
+}
+
+.wrapper{
+  position: relative;
+  padding: 20px;
+}
+
+.modal {
+  top: 0px;
+  left:0px;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  z-index: 10;
+}
+
+button.close-modal{
+  position: absolute;
+  z-index: 100;
+  top: 0px;
+  right: 0px;
+  width: 80px;
+  height: 80px;
+  background-color: #C9262D;
+  color: white;
+  border: none;
 }
